cocogen/tests/fail/missing_setvalref.ccn

start phase hello {
    actions {
        pass p;
        phase1;
    }
};

nodeset x = {missing1};
nodeset y = undefined1;
nodeset z = {missing2} | undefined2;

root node ast {
    children {
        ast next
    }
};

phase phase1 {
    actions {
        pass doSomething;
    } 
};
